[package]
edition = "2021"
name    = "liquid-dsp"
version = "0.1.0"

[dependencies]
liquid-dsp-sys = { path = "../liquid-dsp-sys" }
num-complex    = "0"
thiserror      = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "benchmarks"
harness = false
